app/src/main/java/com/example/mvvmclean/common/datalayer/remote/dto/error/AuthorizationError.java
package com.example.mvvmclean.common.datalayer.remote.dto.error;

public class AuthorizationError extends Throwable {
}
